--- a/samples/xml_app/src/main/res/layout/call_quality_summary.xml
+++ b/samples/xml_app/src/main/res/layout/call_quality_summary.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/quality_indicator_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -30,7 +30,10 @@
             android:id="@+id/quality_dot"
             android:layout_width="12dp"
             android:layout_height="12dp"
-            android:background="@drawable/quality_dot_shape" />
+            android:background="@drawable/quality_dot_shape"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
             android:id="@+id/quality_text"
@@ -38,23 +41,27 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            tools:text="Good" />
+            tools:text="Good"
+            app:layout_constraintStart_toEndOf="@id/quality_dot"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1" />
-
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/view_all_metrics_button"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_height="@dimen/spacing_medium"
+            android:layout_marginStart="@dimen/spacing_normal"
             android:text="@string/view_all_call_metrics"
-            android:textSize="14sp"
-            app:cornerRadius="16dp"
-            app:strokeColor="@color/main_green"
-            app:strokeWidth="1dp" />
-    </LinearLayout>
+            android:textAllCaps="false"
+            android:paddingStart="@dimen/spacing_tiny"
+            android:paddingEnd="@dimen/spacing_tiny"
+            android:layout_marginTop="1dp"
+            style="@style/CustomOutlinedButton"
+            android:textSize="@dimen/font_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
