--- a/samples/xml_app/src/main/res/drawable/metric_row_background.xml
+++ b/samples/xml_app/src/main/res/drawable/metric_row_background.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorSecondary" />
-    <corners android:radius="4dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#F5F5F5" />
+    <corners android:radius="8dp" />
 </shape>
