--- a/samples/xml_app/src/main/res/layout/call_history_bottom_sheet.xml
+++ b/samples/xml_app/src/main/res/layout/call_history_bottom_sheet.xml
@@ -20,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Call History"
+            android:text="@string/call_history_title"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Close"
+            android:contentDescription="@string/call_history_close"
             android:padding="8dp"
             android:src="@drawable/ic_close" />
     </LinearLayout>
@@ -47,12 +47,13 @@
         android:id="@+id/emptyStateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No call history available"
+        android:text="@string/call_history_empty"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:visibility="gone"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/header_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
