--- a/samples/xml_app/src/main/res/layout/fragment_home_call.xml
+++ b/samples/xml_app/src/main/res/layout/fragment_home_call.xml
@@ -114,7 +114,7 @@
                     android:id="@+id/callHistoryButton"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/spacing_medium"
-                    android:layout_marginTop="@dimen/spacing_small"
+                    android:layout_marginTop="@dimen/spacing_18dp"
                     android:text="@string/call_history_title"
                     android:textAllCaps="false"
                     android:paddingStart="@dimen/spacing_tiny"
