--- a/samples/xml_app/src/main/res/layout/credentials_layout.xml
+++ b/samples/xml_app/src/main/res/layout/credentials_layout.xml
@@ -225,31 +225,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:id="@+id/debugToggleLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/spacing_normal"
-            android:gravity="center_vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout">
-
-            <TextView
-                android:id="@+id/debugLabel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/debug_mode"
-                style="@style/FieldLabelStyle" />
-
-            <com.google.android.material.switchmaterial.SwitchMaterial
-                android:id="@+id/debugSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
         <Button
             android:id="@+id/confirmButton"
             android:layout_width="wrap_content"
@@ -261,7 +236,7 @@
             android:textStyle="bold"
             style="@style/CustomPrimaryButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/debugToggleLayout"
+            app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout"
             />
 
         <Button
@@ -275,7 +250,7 @@
             android:textSize="12sp"
             style="@style/CustomOutlinedButton"
             app:layout_constraintStart_toEndOf="@+id/confirmButton"
-            app:layout_constraintTop_toBottomOf="@+id/debugToggleLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout" />
 
         <View
             android:layout_width="match_parent"
