feature: set prefetch ice candidates in SDK

--- a/samples/xml_app/src/main/res/menu/overflow_menu.xml
+++ b/samples/xml_app/src/main/res/menu/overflow_menu.xml
@@ -29,7 +29,7 @@
     <item
         android:id="@+id/action_prefetch_ice_candidates"
         android:title="@string/enable_prefetch_ice_candidates"
-        android:icon="@drawable/ic_more_vert"
+        android:icon="@drawable/ic_handshake"
         app:showAsAction="never" />
 
     <item
