--- a/samples/xml_app/src/main/res/layout/dialog_assistant_login.xml
+++ b/samples/xml_app/src/main/res/layout/dialog_assistant_login.xml
@@ -19,8 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        app:boxStrokeColor="@color/telnyx_blue"
-        app:hintTextColor="@color/telnyx_blue">
+        app:boxStrokeColor="@color/black"
+        app:hintTextColor="@color/black">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTargetId"
