--- a/samples/xml_app/src/main/res/layout/credentials_layout.xml
+++ b/samples/xml_app/src/main/res/layout/credentials_layout.xml
@@ -251,31 +251,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/trickleIceLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/spacing_normal"
-            android:gravity="center_vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/forceRelayLayout">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Use Trickle ICE"
-                android:textSize="14sp"
-                android:textColor="@color/black" />
-
-            <com.google.android.material.switchmaterial.SwitchMaterial
-                android:id="@+id/trickleIceSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false" />
-
-        </LinearLayout>
+        
 
         <Button
             android:id="@+id/confirmButton"
@@ -288,7 +264,7 @@
             android:textStyle="bold"
             style="@style/CustomPrimaryButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trickleIceLayout"
+            app:layout_constraintTop_toBottomOf="@+id/forceRelayLayout"
             />
 
         <Button
@@ -302,7 +278,7 @@
             android:textSize="12sp"
             style="@style/CustomOutlinedButton"
             app:layout_constraintStart_toEndOf="@+id/confirmButton"
-            app:layout_constraintTop_toBottomOf="@+id/trickleIceLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/forceRelayLayout" />
 
         <View
             android:layout_width="match_parent"
