Feature: use mutedMicOnStart parameter in samples apps

--- a/samples/xml_app/src/main/res/menu/overflow_menu.xml
+++ b/samples/xml_app/src/main/res/menu/overflow_menu.xml
@@ -45,6 +45,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_mute_on_start"
+        android:title="@string/mute_on_start_off"
+        android:icon="@drawable/ic_more_vert"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_region_selection"
         android:title="Region"
         android:icon="@drawable/ic_more_vert"
