[WEBRTC-2961]: Android SDK - Ice Trickle Support (#660)
* WEBRTC-2961: Implement Android SDK Ice Trickle Support

- Add useTrickleIce parameter to TelnyxConfig (CredentialConfig and TokenConfig) with default false
- Create new SocketMethods for telnyx_rtc.candidate and telnyx_rtc.endOfCandidates
- Modify signaling process in Peer.kt to support trickle ICE:
  * Send ICE candidates via signaling when trickle ICE enabled
  * Add candidates locally when trickle ICE disabled
  * Send end-of-candidates signal when ICE gathering completes
- Update TelnyxClient.kt with trickle ICE configuration and message handling
- Add CandidateParams and EndOfCandidatesParams classes for ICE candidate signaling
- Update TxSocket.kt to handle CANDIDATE and END_OF_CANDIDATES socket methods
- Add onCandidateReceived() and onEndOfCandidatesReceived() methods to TxSocketListener
- Update telnyx_common module Profile model and utility functions
- Add trickle ICE checkbox to both sample apps (compose_app and xml_app)
- Enable users to toggle trickle ICE on/off during login configuration

This implementation allows faster call establishment when trickle ICE is enabled
by sending ICE candidates as they are discovered rather than waiting for all
candidates to be gathered before starting the signaling process.

* Complete trickle ICE implementation

- Remove useTrickleIce from TelnyxConfig (CredentialConfig and TokenConfig)
- Add useTrickleIce parameter to newInvite() and acceptCall() methods with default false
- Update all domain classes to support useTrickleIce parameter:
  - SendInvite.kt and AcceptCall.kt
  - EndCurrentAndAcceptIncoming.kt and HoldCurrentAndAcceptIncoming.kt
  - AnswerIncomingPushCall.kt (both invoke and invokeFlow methods)
- Add useTrickleIce state variable to TelnyxViewModel
- Update all ViewModel calls to pass useTrickleIce parameter
- Add trickle ICE toggle to compose_app overflow menu with dynamic text
- Add trickle ICE toggle to xml_app overflow menu with toggleTrickleIce

--- a/samples/xml_app/src/main/res/menu/overflow_menu.xml
+++ b/samples/xml_app/src/main/res/menu/overflow_menu.xml
@@ -4,19 +4,19 @@
     
     <item
         android:id="@+id/action_websocket_messages"
-        android:title="Websocket Messages"
+        android:title="@string/websocket_messages"
         android:icon="@drawable/ic_message"
         app:showAsAction="never" />
         
     <item
         android:id="@+id/action_copy_fcm_token"
-        android:title="Copy FCM Token"
+        android:title="@string/copy_fcm_token"
         android:icon="@drawable/ic_copy"
         app:showAsAction="never" />
         
     <item
         android:id="@+id/action_disable_push"
-        android:title="Disable Push Notifications"
+        android:title="@string/disable_push_notifications"
         android:icon="@drawable/ic_notifications_off"
         app:showAsAction="never" />
 
@@ -33,8 +33,14 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_trickle_ice"
+        android:title="@string/enable_trickle_ice"
+        android:icon="@drawable/ic_more_vert"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_preferred_codecs"
-        android:title="Preferred Codecs"
+        android:title="@string/preferred_codecs"
         android:icon="@drawable/ic_more_vert"
         app:showAsAction="never" />
 
@@ -52,7 +58,7 @@
 
     <item
         android:id="@+id/action_region_selection"
-        android:title="Region"
+        android:title="@string/region"
         android:icon="@drawable/ic_more_vert"
         app:showAsAction="never" />
 
